# megascops

./: Makefile  README.md  pyproject.toml
megascops/: bpe.py  main.py
